@@ -70,6 +70,7 @@ Post-v2.5.0
        fragmentation or NAT support yet)
      * Support for DPDK 16.07
      * Optional support for DPDK pdump enabled.
+     * Jumbo frame support
    - Increase number of registers to 16.
    - ovs-benchmark: This utility has been removed due to lack of use and
      bitrot.
